--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "appdmg": "^0.6.6",
+    "create-dmg": "^7.1.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1"
   },
@@ -74,4 +76,3 @@
     ]
   }
 }
-
