Use standard macOS app icon and fix launcher
- Switched to standard macOS GenericApplicationIcon.icns
- Fixed app launcher to use Terminal → npm start
- Executable renamed to 'launcher' for clarity
- App now opens and works correctly
- Rebuilt DMG with working installer

--- a/dist-dmg/AutoMate Installer.app/Contents/Info.plist
+++ b/dist-dmg/AutoMate Installer.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleExecutable</key>
-    <string>AutoMate Installer</string>
+    <string>launcher</string>
     <key>CFBundleIdentifier</key>
     <string>com.automate.installer</string>
     <key>CFBundleName</key>
@@ -12,9 +12,5 @@
     <string>APPL</string>
     <key>CFBundleIconFile</key>
     <string>icon.icns</string>
-    <key>CFBundleVersion</key>
-    <string>1.0.0</string>
-    <key>LSMinimumSystemVersion</key>
-    <string>10.13</string>
 </dict>
 </plist>
